kubernetes/application/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diplom
  labels:
    app.kubernetes.io/part-of: netology-diplom
