kubernetes/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplom-app
  namespace: diplom
  labels:
    app.kubernetes.io/name: diplom-app
    app.kubernetes.io/part-of: netology-diplom
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: diplom-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: diplom-app
        app.kubernetes.io/part-of: netology-diplom
    spec:
      securityContext:
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: diplom-app
          image: cr.yandex/crpir2qgou0nqqfn9ccn/diplom-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 32Mi
