kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app
  namespace: diplom
  labels:
    app.kubernetes.io/name: diplom-app
    app.kubernetes.io/part-of: netology-diplom
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: diplom-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
