kubernetes/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-app
  namespace: diplom
  labels:
    app.kubernetes.io/name: diplom-app
    app.kubernetes.io/part-of: netology-diplom
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - netology-devops-diplom.neelov.family
      secretName: diplom-app-tls
  rules:
    - host: netology-devops-diplom.neelov.family
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diplom-app
                port:
                  name: http
